--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "format": "harlowe-3"
   },
   "scripts": {
-    "build-once":  "gulp build && tweego -f $npm_package_config_format -o dist/index.html --head=src/head-content.html project",
+    "build-once": "gulp build && tweego -f $npm_package_config_format -o dist/index.html --head=src/head-content.html project",
     "watch:gulp": "gulp default",
     "watch:twee": "tweego -f $npm_package_config_format -w -o dist/index.html --head=src/head-content.html project"
   },
@@ -16,8 +16,11 @@
     "tweego",
     "twee"
   ],
-  "author": "Cliff Hall",
-  "license": "MIT",
+  "contributors": [
+    {"name":"Cliff Hall", "url":"https://github.com/cliffhall", "email":"cliff@futurescale.com"},
+    {"name": "Chapel", "url":"https://github.com/ChapelR", "email":"chapel@twinelab.net"}
+  ],
+  "license": "BSD-3-Clause",
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/plugin-external-helpers": "^7.2.0",
