--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "mars-colony",
+  "name": "NextRock",
   "version": "1.0.0",
   "description": "Run a colony on the red planet. A Twine game",
   "main": "./dist/index.html",
   "config": {
-    "format": "sugarcube-2"
+    "format": "sugarcube-2",
+    "episode": "ep1"
   },
   "scripts": {
-    "build-once": "gulp build && tweego -f $npm_package_config_format -o dist/index.html --head=src/head-content.html project",
+    "build-once": "gulp build && tweego -f $npm_package_config_format -o dist/index.html --head=src/head-content.html project/common project/episodes/$npm_package_config_episode",
     "watch:gulp": "gulp default",
-    "watch:twee": "tweego -f $npm_package_config_format -w -o dist/index.html --head=src/head-content.html project"
+    "watch:twee": "tweego -f $npm_package_config_format -w -o dist/index.html --head=src/head-content.html project/common project/episodes/$npm_package_config_episode"
   },
   "keywords": [
     "twine",
@@ -44,8 +45,7 @@
     "gulp-jshint": "^2.1.0",
     "gulp-noop": "^1.0.0",
     "gulp-uglify": "^3.0.2",
-    "jshint": "^2.10.2",
-    "opn-cli": "^3.1.0"
+    "jshint": "^2.10.2"
   },
   "repository": {
     "type": "git",
