* Added location macro which suppresses location description if a scene is being shown * Added setup.navigate which is called when a nav macro link is called, clearing $currentNav and $endingBranchShown if set. * Refactor/renamed plot macro's filterCondition to selectCondition. * Refactor/renamed plot-evaluator macro to narrator. * In setup.renderCurrentBranch, if rendering an ending branch (no actions), set $endingBranchShown flag to true. * In scene macro, allow the start argument to branch to be optional, showing the first defined branch first if no start branch defined. *

--- a/NextRock - Ep1.scriv/Settings/ui.plist
+++ b/NextRock - Ep1.scriv/Settings/ui.plist
@@ -249,8 +249,10 @@
 		</dict>
 		<key>8CD53828-0985-4224-8FEB-D33B3FBA9865</key>
 		<dict>
+			<key>DocID</key>
+			<string>145E7BB1-F0E1-4730-8E6A-1F007EE78C24</string>
 			<key>Row</key>
-			<integer>-1</integer>
+			<integer>0</integer>
 		</dict>
 		<key>8D72034E-58DB-4EFF-89D7-DB988ECC0E19</key>
 		<dict>
@@ -407,7 +409,7 @@
 		</dict>
 	</dict>
 	<key>supportingDocumentEditor.scrollRect</key>
-	<string>{{0, 0}, {462.39999999999998, 480.80000000000001}}</string>
+	<string>{{0, 0}, {558.39999999999998, 488.80000000000001}}</string>
 	<key>supportingDocumentEditor.textEditorState</key>
 	<dict>
 		<key>textScaleFactor</key>
