--- a/NextRock - Ep1.scriv/Settings/ui.plist
+++ b/NextRock - Ep1.scriv/Settings/ui.plist
@@ -15,8 +15,8 @@
 	<false/>
 	<key>binderSplitFrames</key>
 	<array>
-		<string>{{0, 0}, {243, 728}}</string>
-		<string>{{244, 0}, {1122, 728}}</string>
+		<string>{{0, 0}, {203, 687}}</string>
+		<string>{{204, 0}, {938, 687}}</string>
 	</array>
 	<key>bookmarksPreviewTextSettings</key>
 	<dict>
@@ -380,8 +380,8 @@
 	<integer>2</integer>
 	<key>inspectorSplitFrames</key>
 	<array>
-		<string>{{0, 0}, {725, 698}}</string>
-		<string>{{726, 0}, {396, 698}}</string>
+		<string>{{0, 0}, {541, 657}}</string>
+		<string>{{542, 0}, {396, 657}}</string>
 	</array>
 	<key>inspectorWidth</key>
 	<real>245</real>
@@ -409,7 +409,7 @@
 		</dict>
 	</dict>
 	<key>supportingDocumentEditor.scrollRect</key>
-	<string>{{0, 0}, {580, 513.60000000000002}}</string>
+	<string>{{0, 24.800000000000001}, {432.80000000000001, 480.80000000000001}}</string>
 	<key>supportingDocumentEditor.textEditorState</key>
 	<dict>
 		<key>textScaleFactor</key>
